chenged zoom limit (the lagrest possible scale and also step), built .deb

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-qtractor (0.9.34-77.1-zazoid) unstable; urgency=low
+qtractor (0.9.34-77.2) unstable; urgency=low
 
   * just forked for fun
 
- -- Alexander Gorodinski <testor@zazoid.com>  Thu, 19 Aug 2023 19:31:18 +0300
+ -- Alexander Gorodinski <testor@zazoid.com>  Sat, 19 Aug 2023 19:31:18 +0300
 
 
 qtractor (0.9.34-77.1) unstable; urgency=low
